add localization support

--- a/StateNotifyByPop/StateNotifyByPop.csproj
+++ b/StateNotifyByPop/StateNotifyByPop.csproj
@@ -12,6 +12,9 @@
         <Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll">
           <Private>False</Private>
         </Reference>
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\SodaLocalization.dll">
+          <Private>False</Private>
+        </Reference>
         <Reference Include="$(DuckovPath)\Duckov_Data\Managed\Newtonsoft.Json.dll">
           <Private>False</Private>
         </Reference>
