add grenade check

--- a/StateNotifyByPop/StateNotifyByPop.csproj
+++ b/StateNotifyByPop/StateNotifyByPop.csproj
@@ -18,6 +18,9 @@
         <Reference Include="$(DuckovPath)\Duckov_Data\Managed\Newtonsoft.Json.dll">
           <Private>False</Private>
         </Reference>
+        <Reference Include="0Harmony">
+          <HintPath>..\libs\0Harmony.dll</HintPath>
+        </Reference>
         <Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*">
 	      <Private>False</Private>
 	    </Reference>
